Settings alias, head

--- a/src/setup/vue/template.html
+++ b/src/setup/vue/template.html
@@ -2,7 +2,7 @@
   <body>
   <head>
     <meta charset="UTF-8">
-    <title>{{typeof title !== 'undefined' ? title : '-'}}</title>
+    {{{typeof endifyHead !== 'undefined' ? endifyHead : ''}}}
     <script>window.__ENV__ = JSON.parse('{{{JSON.stringify(env)}}}');</script>
   </head>
   <body>
