--- a/src/setup/vue/template.html
+++ b/src/setup/vue/template.html
@@ -1,7 +1,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    {{{typeof endifyHead !== 'undefined' ? endifyHead : ''}}}
+    {{{ meta.inject().meta.text() }}}
+    {{{ meta.inject().title.text() }}}
+    {{{ meta.inject().link.text() }}}
+    {{{ meta.inject().style.text() }}}
+    {{{ meta.inject().script.text() }}}
+    {{{ meta.inject().noscript.text() }}}
     <script>window.__ENDIFY_ENV__ = JSON.parse('{{{JSON.stringify(env)}}}');</script>
   </head>
   <body>
