Vue entry is working now

--- a/packages/example/src/client/template.html
+++ b/packages/example/src/client/template.html
@@ -2,16 +2,17 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        {{{ endify.html.meta() }}}
-        {{{ endify.html.title() }}}
-        {{{ endify.html.link() }}}
-        {{{ endify.html.style() }}}
-        {{{ endify.html.script() }}}
-        {{{ endify.html.noscript() }}}
-        {{{ endify.html.global() }}}
-        <script>window.__ENDIFY__ = JSON.parse('{{{JSON.stringify(endify)}}}');</script>
+<!--        {{{ endify.html.meta() }}}-->
+<!--        {{{ endify.html.title() }}}-->
+<!--        {{{ endify.html.link() }}}-->
+<!--        {{{ endify.html.style() }}}-->
+<!--        {{{ endify.html.script() }}}-->
+<!--        {{{ endify.html.noscript() }}}-->
+<!--        {{{ endify.html.global() }}}-->
+<!--        <script>window.__ENDIFY__ = JSON.parse('{{{JSON.stringify(endify)}}}');</script>-->
     </head>
     <body>
-        <div id="app">{{{ endify.html.app() }}}</div>
+        <div id="app"></div>
+        <div id="app2"><!--{{{ endify.html.app() }}}--></div>
     </body>
 </html>
